--- a/index.html
+++ b/index.html
@@ -4,9 +4,30 @@
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <script src="https://cdn.tailwindcss.com"></script>
+        <script>
+            tailwind.config = {
+                theme: {
+                    extend: {
+                        spacing: {
+                            13: '3.25rem',
+                        },
+                    },
+                },
+            };
+        </script>
         <title>Belajar TailwindCSS</title>
+        <style type="text/tailwindcss">
+            * {
+                border: 1px solid red;
+            }
+        </style>
     </head>
     <body>
-        <h1 class="text-6xl">Mari Belajar Tailwind CSS</h1>
+        <h1>Mari Belajar Tailwind CSS</h1>
+
+        <section>
+            <h2>Spacing</h2>
+            <div class="ml-13">Margin</div>
+        </section>
     </body>
 </html>
