--- a/index.html
+++ b/index.html
@@ -25,9 +25,15 @@
     <body>
         <h1>Mari Belajar Tailwind CSS</h1>
 
-        <section>
+        <section class="mb-10">
             <h2>Spacing</h2>
             <div class="ml-13">Margin</div>
+            <div class="py-8">Padding</div>
+        </section>
+
+        <section class="mb-10">
+            <h2>Sizing</h2>
+            <div class="w-32 h-32">Kotak 1</div>
         </section>
     </body>
 </html>
