--- a/index.html
+++ b/index.html
@@ -3,6 +3,12 @@
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="preconnect" href="https://fonts.googleapis.com" />
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+        <link
+            href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&display=swap"
+            rel="stylesheet"
+        />
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
             tailwind.config = {
@@ -11,29 +17,75 @@
                         spacing: {
                             13: '3.25rem',
                         },
+                        fontFamily: {
+                            inter: ['Inter'],
+                        },
+                        colors: {
+                            lutfi: '#bada55',
+                            kopi: '#c0ffee',
+                        },
                     },
                 },
             };
         </script>
         <title>Belajar TailwindCSS</title>
-        <style type="text/tailwindcss">
-            * {
-                border: 1px solid red;
-            }
-        </style>
     </head>
     <body>
-        <h1>Mari Belajar Tailwind CSS</h1>
+        <h1 class="text-6xl font-bold text-center my-10">
+            Mari Belajar
+            <span
+                class="bg-gradient-to-r from-blue-400 to-teal-400 bg-clip-text text-transparent"
+                >TailwindCSS</span
+            >
+        </h1>
 
-        <section class="mb-10">
-            <h2>Spacing</h2>
-            <div class="ml-13">Margin</div>
+        <section
+            class="mb-10 bg-gradient-to-br from-indigo-200 via-red-400 to-yellow-300"
+        >
+            <h2 class="text-center text-3xl">Spacing</h2>
+            <div class="m-13">Margin</div>
             <div class="py-8">Padding</div>
         </section>
 
-        <section class="mb-10">
-            <h2>Sizing</h2>
-            <div class="w-32 h-32">Kotak 1</div>
+        <section class="mb-10 bg-green-200">
+            <h2 class="text-center text-3xl">Sizing</h2>
+            <div class="w-32 h-32 bg-kopi">Kotak 1</div>
+        </section>
+
+        <section class="mb-96 font-inter max-w-3xl mx-auto">
+            <h2 class="mb-2 text-4xl font-bold">
+                Belajar Mengenai Typography pada TailwindCSS
+            </h2>
+            <div class="mb-4 text-lg text-gray-500">
+                By
+                <a href="#" class="text-gray-700 font-semibold"
+                    >Ahmad Lutfi Rizki Patria</a
+                >, 3 Juli 2023
+            </div>
+            <p class="mb-4">
+                Lorem ipsum dolor sit amet,
+                <a href="#" class="underline font-semibold text-blue-600"
+                    >consectetur</a
+                >
+                adipisicing elit. Aliquam nulla ducimus distinctio. Suscipit
+                optio illo quo consequatur aspernatur ipsum nesciunt hic ullam
+                cum odio quod voluptatibus alias impedit ipsam, unde nostrum
+                velit magni amet. Voluptatibus, optio harum consectetur atque at
+                aliquid in qui eligendi eum inventore facilis impedit
+                accusantium delectus.
+            </p>
+            <blockquote class="mb-4 italic font-thin text-xl">
+                "Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Eligendi iusto numquam earum commodi sit blanditiis cumque,
+                optio amet quos distinctio."
+            </blockquote>
+            <p class="mb-4">
+                Lorem ipsum dolor sit amet, consectetur adipisicing elit.
+                Nesciunt itaque ipsa ipsam? Eligendi mollitia molestias
+                temporibus? Quis eveniet quo, impedit provident praesentium,
+                earum soluta perferendis possimus dicta, recusandae deleniti
+                veritatis.
+            </p>
         </section>
     </body>
 </html>
