learning background utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
             <div class="w-32 h-32 bg-kopi">Kotak 1</div>
         </section>
 
-        <section class="mb-96 font-inter max-w-3xl mx-auto">
+        <section class="font-inter max-w-3xl mx-auto">
             <h2 class="mb-2 text-4xl font-bold">
                 Belajar Mengenai Typography pada TailwindCSS
             </h2>
@@ -87,5 +87,47 @@
                 veritatis.
             </p>
         </section>
+
+        <div
+            class="max-w-xl h-96 bg-[#bada55] mx-auto mt-[42px] overflow-y-scroll bg-fixed"
+            style="
+                background-image: url('https://source.unsplash.com/1000x600?computer');
+            "
+        >
+            <p class="p-5 text-2xl">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Culpa
+                vitae enim alias? Placeat accusamus ipsam nostrum debitis
+                molestias maiores rerum quos repellat eveniet unde similique
+                quasi omnis nulla obcaecati, quam tenetur fugit enim praesentium
+                cumque et mollitia, voluptates pariatur blanditiis. Deserunt
+                unde minima deleniti laudantium ea quis, asperiores voluptas quo
+                esse temporibus voluptatem, fuga dicta delectus, molestiae
+                ratione nobis earum? Quo numquam blanditiis facilis incidunt
+                ratione aspernatur dolores in accusamus magnam. Vitae
+                consectetur accusantium repellendus pariatur quidem possimus
+                magnam id dolorum, illum deserunt ullam, hic explicabo numquam!
+                Rerum, voluptatum. Necessitatibus omnis numquam rem laudantium
+                iste vero in quibusdam odio. Debitis quia assumenda id iusto,
+                dicta vero itaque ipsa! Placeat illum voluptate quas, sunt
+                aperiam reiciendis, nisi cum illo a accusantium nesciunt fuga
+                distinctio iure nemo mollitia! Laboriosam praesentium deleniti,
+                impedit sint at obcaecati ipsa modi minima vero maiores
+                voluptatem corporis eius. Deleniti recusandae hic aspernatur
+                fugiat! Fugit praesentium, ducimus in nesciunt veritatis
+                aspernatur dignissimos placeat dolores provident velit ut ipsum
+                sit tempora amet officiis obcaecati dolorum a fuga maxime quia
+                impedit. Neque, porro distinctio corporis similique, id,
+                asperiores omnis possimus voluptate quidem placeat ad amet in
+                cumque quis ex pariatur dolores? Culpa maxime quae dignissimos
+                cumque nulla amet dolorum tempore?
+            </p>
+        </div>
+
+        <div
+            class="mt-32 max-w-xl mx-auto h-96 bg-slate-300 bg-contain bg-no-repeat bg-center"
+            style="background-image: url(./img/image.jpg)"
+        ></div>
+
+        <div class="mb-96"></div>
     </body>
 </html>
