--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
         </div>
 
         <div
-            class="mt-32 max-w-xl mx-auto h-96 bg-slate-300 bg-contain bg-no-repeat bg-center"
+            class="mt-32 max-w-xl mx-auto h-96 bg-slate-300 bg-contain bg-no-repeat bg-center rounded-2xl border-8 border-slate-400"
             style="background-image: url(./img/image.jpg)"
         ></div>
 
