--- a/index.html
+++ b/index.html
@@ -132,6 +132,56 @@
             ></div>
         </div>
 
+        <hr class="my-20" />
+
+        <button
+            class="my-10 bg-sky-500 px-5 py-2 rounded-full text-white font-semibold font-inter block mx-auto hover:bg-sky-600 active:bg-sky-700 focus:ring focus:ring-sky-300"
+        >
+            Simpan
+        </button>
+
+        <div
+            class="max-w-lg my-10 border border-slate-200 rounded-xl mx-auto p-5 shadow-md font-inter hover:bg-sky-500 group font-serif"
+        >
+            <h5
+                class="font-bold text-slate-700 text-lg mb-3 group-hover:text-white"
+            >
+                My Card
+            </h5>
+            <p
+                class="text-slate-600 group-hover:text-white selection:bg-lime-300 selection:text-slate-900 first-line:uppercase first-line:tracking-widest first-letter:text-7xl first-letter:float-left first-letter:mr-3"
+            >
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro
+                amet quis, reprehenderit quaerat minima voluptatibus. Provident
+                fuga officia iure, aperiam qui aliquid ducimus voluptatum
+                reprehenderit doloribus adipisci doloremque laboriosam harum.
+            </p>
+        </div>
+
+        <div
+            class="max-w-lg border border-slate-200 rounded-xl p-5 shadow-md font-inter mx-auto"
+        >
+            <form action="">
+                <label for="email">
+                    <span
+                        class="block font-semibold mb-1 text-slate-700 after:content-['*'] after:text-pink-500 after:ml-0.5"
+                        >Email</span
+                    >
+                    <input
+                        id="email"
+                        type="email"
+                        placeholder="masukkan email.."
+                        class="px-3 py-2 border shadow rounded w-full block text-sm placeholder:text-slate-400 focus:outline-none focus:ring-1 focus:ring-sky-500 focus:border-sky-500 invalid:text-pink-700 invalid:focus:ring-pink-700 invalid:focus:border-pink-700 peer"
+                    />
+                    <p
+                        class="text-sm m-1 text-pink-700 invisible peer-invalid:visible"
+                    >
+                        Email tidak valid!
+                    </p>
+                </label>
+            </form>
+        </div>
+
         <div class="mb-96"></div>
     </body>
 </html>
