--- a/index.html
+++ b/index.html
@@ -203,6 +203,18 @@
             </form>
         </div>
 
+        <hr class="my-20" />
+
+        <div
+            class="w-40 h-40 bg-sky-500 mx-auto rounded-lg shadow-lg hover:rotate-180 hover:bg-pink-500 transition origin-top-left"
+        ></div>
+
+        <div class="w-40 h-40 mt-20 mx-auto group">
+            <div
+                class="w-full h-full bg-sky-500 rounded-lg shadow-lg group-hover:rotate-180 origin-top-left transition duration-1000 ease delay-1000"
+            ></div>
+        </div>
+
         <div class="mb-96"></div>
 
         <script>
