--- a/index.html
+++ b/index.html
@@ -25,6 +25,20 @@
                             lutfi: '#bada55',
                             kopi: '#c0ffee',
                         },
+                        animation: {
+                            'spin-slow': 'spin 3s linear infinite',
+                            goyang: 'goyang 1s ease-in-out infinite',
+                        },
+                        keyframes: {
+                            goyang: {
+                                '0%, 100%': {
+                                    transform: 'rotate(-3deg)',
+                                },
+                                '50%': {
+                                    transform: 'rotate(3deg)',
+                                },
+                            },
+                        },
                     },
                 },
             };
@@ -214,6 +228,10 @@
                 class="w-full h-full bg-sky-500 rounded-lg shadow-lg group-hover:rotate-180 origin-top-left transition duration-1000 ease delay-1000"
             ></div>
         </div>
+
+        <div
+            class="w-40 h-40 mt-20 bg-pink-500 mx-auto rounded-lg shadow-lg transition animate-goyang"
+        ></div>
 
         <div class="mb-96"></div>
 
