learning container utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -233,6 +233,22 @@
             class="w-40 h-40 mt-20 bg-pink-500 mx-auto rounded-lg shadow-lg transition animate-goyang"
         ></div>
 
+        <hr class="my-20 border-t-4" />
+
+        <div class="container px-8 mx-auto">
+            <div class="border rounded-lg shadow-lg p-10">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Quod velit corrupti delectus quisquam possimus voluptatum
+                    maxime tempore fugit unde nemo vel corporis porro veniam
+                    commodi ratione architecto sunt eveniet ducimus deserunt
+                    officiis distinctio, nihil quis itaque. Ad officiis
+                    molestiae sequi culpa aperiam illo quibusdam, possimus
+                    sapiente placeat laborum iure ipsum!
+                </p>
+            </div>
+        </div>
+
         <div class="mb-96"></div>
 
         <script>
