learning float utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -237,6 +237,12 @@
 
         <div class="container px-8 mx-auto">
             <div class="border rounded-lg shadow-lg p-10">
+                <img
+                    src="./img/image.jpg"
+                    alt="laptop"
+                    width="150"
+                    class="float-left mr-3"
+                />
                 <p>
                     Lorem, ipsum dolor sit amet consectetur adipisicing elit.
                     Quod velit corrupti delectus quisquam possimus voluptatum
