learning position utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="scroll-smooth">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -236,7 +236,12 @@
         <hr class="my-20 border-t-4" />
 
         <div class="container px-8 mx-auto">
-            <div class="border rounded-lg shadow-lg p-10">
+            <div class="border rounded-lg shadow-lg p-10 relative">
+                <div
+                    class="w-10 h-10 bg-sky-200 rounded-full flex fixed cursor-pointer bottom-5 right-5"
+                >
+                    <a href="#" class="text-xl m-auto font-bold">^</a>
+                </div>
                 <img
                     src="./img/image.jpg"
                     alt="laptop"
