learning columns utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -260,6 +260,41 @@
             </div>
         </div>
 
+        <div class="container px-8 mx-auto mt-20">
+            <div class="border rounded-lg shadow-lg p-10 columns-3">
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="mb-4"
+                />
+            </div>
+        </div>
+
         <div class="mb-96"></div>
 
         <script>
