--- a/index.html
+++ b/index.html
@@ -295,6 +295,40 @@
             </div>
         </div>
 
+        <hr class="my-24 border-t-4" />
+
+        <div
+            class="container px-6 font-inter max-w-md mx-auto sm:max-w-xl md:max-w-5xl"
+        >
+            <h3
+                class="text-4xl font-bold text-slate-800 sm:text-5xl md:text-6xl"
+            >
+                Ahmad <span class="text-sky-500">Lutfi</span> Rizki Patria
+            </h3>
+            <img
+                src="./img/laptop.jpg"
+                alt="laptop"
+                class="mt-4 rounded-xl shadow-xl sm:mt-6 sm:h-64 sm:w-full sm:object-cover sm:object-center"
+            />
+            <h2
+                class="mt-6 text-2xl font-semibold text-slate-800 sm:mt-8 sm:text-4xl"
+            >
+                Mari Belajar Programming Bersama Lutfi
+            </h2>
+            <p class="mt-2 text-slate-600 sm:mt-4 sm:text-xl">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Sapiente perspiciatis ipsum, totam repellendus minus deserunt
+                iure illo animi quo beatae
+            </p>
+            <div class="mt-4 sm:mt-6">
+                <a
+                    href="#"
+                    class="inline-block px-5 py-3 bg-red-600 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base"
+                    >Subscribe Channel Youtube</a
+                >
+            </div>
+        </div>
+
         <div class="mb-96"></div>
 
         <script>
