--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" class="scroll-smooth">
+<html lang="en" class="">
     <head>
         <meta charset="UTF-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -298,34 +298,142 @@
         <hr class="my-24 border-t-4" />
 
         <div
-            class="container px-6 font-inter max-w-md mx-auto sm:max-w-xl md:max-w-5xl"
+            class="container px-6 font-inter max-w-md mx-auto sm:max-w-xl md:max-w-5xl lg:flex lg:max-w-full lg:p-0"
         >
-            <h3
-                class="text-4xl font-bold text-slate-800 sm:text-5xl md:text-6xl"
-            >
-                Ahmad <span class="text-sky-500">Lutfi</span> Rizki Patria
-            </h3>
-            <img
-                src="./img/laptop.jpg"
-                alt="laptop"
-                class="mt-4 rounded-xl shadow-xl sm:mt-6 sm:h-64 sm:w-full sm:object-cover sm:object-center"
-            />
-            <h2
-                class="mt-6 text-2xl font-semibold text-slate-800 sm:mt-8 sm:text-4xl"
-            >
-                Mari Belajar Programming Bersama Lutfi
-            </h2>
-            <p class="mt-2 text-slate-600 sm:mt-4 sm:text-xl">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Sapiente perspiciatis ipsum, totam repellendus minus deserunt
-                iure illo animi quo beatae
-            </p>
-            <div class="mt-4 sm:mt-6">
-                <a
-                    href="#"
-                    class="inline-block px-5 py-3 bg-red-600 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base"
-                    >Subscribe Channel Youtube</a
+            <div class="lg:p-12 lg:flex-1">
+                <h3
+                    class="text-4xl font-bold text-slate-800 sm:text-5xl md:text-6xl"
                 >
+                    Ahmad <span class="text-sky-500">Lutfi</span> Rizki Patria
+                </h3>
+                <img
+                    src="./img/laptop.jpg"
+                    alt="laptop"
+                    class="mt-4 rounded-xl shadow-xl sm:mt-6 sm:h-64 sm:w-full sm:object-cover sm:object-center lg:hidden"
+                />
+                <h2
+                    class="mt-6 text-2xl font-semibold text-slate-800 sm:mt-8 sm:text-4xl"
+                >
+                    Mari Belajar Programming Bersama Lutfi
+                </h2>
+                <p class="mt-2 text-slate-600 sm:mt-4 sm:text-xl">
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                    Sapiente perspiciatis ipsum, totam repellendus minus
+                    deserunt iure illo animi quo beatae
+                </p>
+                <div class="mt-4 sm:mt-6">
+                    <a
+                        href="#"
+                        class="inline-block px-5 py-3 bg-red-600 text-white rounded-lg shadow-lg uppercase font-semibold tracking-wider text-sm sm:text-base"
+                        >Subscribe Channel Youtube</a
+                    >
+                </div>
+            </div>
+            <div class="hidden lg:flex lg:w-1/2">
+                <img
+                    src="./img/laptop.jpg"
+                    alt="laptop"
+                    class="object-cover rounded-l-3xl"
+                />
+            </div>
+        </div>
+
+        <h2 class="mt-24 mb-10 text-center font-bold text-3xl text-slate-700">
+            My Gallery
+        </h2>
+
+        <div
+            class="container mx-auto px-6 font-inter sm:flex sm:flex-wrap sm:gap-6 sm:justify-center"
+        >
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
+            </div>
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
+            </div>
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
+            </div>
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
+            </div>
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
             </div>
         </div>
 
