edit UI with flex utility

--- a/index.html
+++ b/index.html
@@ -343,8 +343,26 @@
         </h2>
 
         <div
-            class="container mx-auto px-6 font-inter sm:flex sm:flex-wrap sm:gap-6 sm:justify-center"
+            class="container mx-auto px-6 font-inter sm:flex sm:flex-wrap sm:gap-x-6 sm:gap-y-6 sm:justify-between md:justify-center lg:justify-start"
         >
+            <div
+                class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
+            >
+                <img
+                    src="https://source.unsplash.com/600x400"
+                    alt="image"
+                    class="w-full"
+                />
+                <div class="px-6 py-4">
+                    <div class="font-bold text-xl mb-2 text-slate-700">
+                        Image Title
+                    </div>
+                    <p class="text-sm text-slate-600">
+                        Lorem ipsum dolor, sit amet consectetur adipisicing
+                        elit. Esse, aperiam.
+                    </p>
+                </div>
+            </div>
             <div
                 class="rounded-md shadow-lg overflow-hidden mb-10 sm:w-64 sm:mb-0 md:w-80 lg:w-72"
             >
