learning grid utility in tailwind css

--- a/index.html
+++ b/index.html
@@ -455,6 +455,94 @@
             </div>
         </div>
 
+        <div
+            class="mt-64 p-2 font-inter grid grid-cols-2 gap-2 md:grid-cols-4 md:p-4"
+        >
+            <h2
+                class="h-15 font-semibold text-slate-700 text-xl md:col-start-4 md:row-start-2 md:flex"
+            >
+                <span class="self-center"
+                    >Welcome to Tailwind Grid Utility</span
+                >
+            </h2>
+            <div
+                class="h-15 text-lg font-bold text-slate-600 md:col-start-2 md:row-start-2 md:flex"
+            >
+                <span class="self-end">@alutfi05._</span>
+            </div>
+
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img1.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img2.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img3.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img4.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img5.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-2 overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img6.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-4 overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img7.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img8.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img9.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+            <div
+                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
+            >
+                <div
+                    class="w-full h-full bg-[url('/grid/img10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
+                ></div>
+            </div>
+        </div>
+
         <div class="mb-96"></div>
 
         <script>
