--- a/index.html
+++ b/index.html
@@ -9,46 +9,8 @@
             href="https://fonts.googleapis.com/css2?family=Inter:wght@200;400;600;700;900&display=swap"
             rel="stylesheet"
         />
-        <script src="https://cdn.tailwindcss.com"></script>
-        <script>
-            tailwind.config = {
-                darkMode: 'class',
-                theme: {
-                    extend: {
-                        spacing: {
-                            13: '3.25rem',
-                        },
-                        fontFamily: {
-                            inter: ['Inter'],
-                        },
-                        colors: {
-                            lutfi: '#bada55',
-                            kopi: '#c0ffee',
-                        },
-                        animation: {
-                            'spin-slow': 'spin 3s linear infinite',
-                            goyang: 'goyang 1s ease-in-out infinite',
-                        },
-                        keyframes: {
-                            goyang: {
-                                '0%, 100%': {
-                                    transform: 'rotate(-3deg)',
-                                },
-                                '50%': {
-                                    transform: 'rotate(3deg)',
-                                },
-                            },
-                        },
-                    },
-                },
-            };
-        </script>
+        <link rel="stylesheet" href="css/style.css" />
         <title>Belajar TailwindCSS</title>
-        <style type="text/tailwindcss">
-            #toggle:checked ~ label div.toggle-circle {
-                @apply translate-x-3;
-            }
-        </style>
     </head>
     <body class="dark:bg-slate-800 dark:text-slate-200">
         <h1 class="text-6xl font-bold text-center my-10">
@@ -471,77 +433,39 @@
                 <span class="self-end">@alutfi05._</span>
             </div>
 
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img1.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card">
+                <div class="grid-card-image bg-[url('/grid/img1.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img2.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card md:col-start-3">
+                <div class="grid-card-image bg-[url('/grid/img2.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img3.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card">
+                <div class="grid-card-image bg-[url('/grid/img3.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img4.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card">
+                <div class="grid-card-image bg-[url('/grid/img4.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img5.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card">
+                <div class="grid-card-image bg-[url('/grid/img5.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-2 overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img6.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card md:col-start-2">
+                <div class="grid-card-image bg-[url('/grid/img6.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-4 overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img7.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card md:col-start-4">
+                <div class="grid-card-image bg-[url('/grid/img7.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img8.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card">
+                <div class="grid-card-image bg-[url('/grid/img8.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img9.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card md:col-start-3">
+                <div class="grid-card-image bg-[url('/grid/img9.jpg')]"></div>
             </div>
-            <div
-                class="h-15 bg-blue-500 aspect-[4/3] rounded-lg md:aspect-[3/4] xl:aspect-[4/3] md:col-start-3 overflow-hidden group relative hover:scale-95 transition duration-700"
-            >
-                <div
-                    class="w-full h-full bg-[url('/grid/img10.jpg')] bg-cover bg-center absolute group-hover:scale-125 group-hover:rotate-12 transition duration-700"
-                ></div>
+            <div class="group grid-card md:col-start-3">
+                <div class="grid-card-image bg-[url('/grid/img10.jpg')]"></div>
             </div>
         </div>
+
+        <h1>Hello World!</h1>
 
         <div class="mb-96"></div>
 
